persistance-api/src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: persistenceservice      
spec:
  ports:
  - nodePort: 0
    port: 8080               
    protocol: TCP
    targetPort: 8080
