persistance-api/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: persistence-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: persistence-service
